--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
 
   <body class="overflow-x-hidden">
-      Remove the old github initializing.<span class="text-green-400"
+      Remove the old github initializing..........<span class="text-green-400"
         > Remove-Item -Recurse -Force .git</span
       >
     </h1>
