--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       <div class="flex flex-col gap-10">
         <div class="relative overflow-hidden rounded-xl">
           <div
-            class="absolute -bottom-[98%] -right-[70%] md:-bottom-[95%] md:-right-[5%] z-[-1] w-[900px] h-[900px] md:w-[600px] md:h-[600px] rounded-xl"
+            class="absolute -bottom-[98%] -right-[70%] md:-bottom-[75%] md:-right-[3%] z-[-1] w-[900px] h-[900px] md:w-[600px] md:h-[600px] rounded-xl"
             style="
               background: radial-gradient(
                 50% 50% at 50% 50%,
@@ -191,7 +191,7 @@
         </div>
         <div class="relative overflow-hidden rounded-xl">
           <div
-            class="absolute -bottom-[98%] -left-[70%] md:-bottom-[95%] md:-left-[5%] z-[-1] w-[900px] h-[900px] md:w-[600px] md:h-[600px]"
+            class="absolute -bottom-[98%] -left-[70%] md:-bottom-[75%] md:-left-[3%] z-[-1] w-[900px] h-[900px] md:w-[600px] md:h-[600px]"
             style="
               background: radial-gradient(
                 50% 50% at 50% 50%,
@@ -296,7 +296,7 @@
         </div>
         <div class="relative overflow-hidden rounded-xl">
           <div
-            class="absolute -bottom-[98%] -right-[70%] md:-bottom-[95%] md:-right-[5%] z-[-1] w-[900px] h-[900px] md:w-[600px] md:h-[600px]"
+            class="absolute -bottom-[98%] -right-[70%] md:-bottom-[75%] md:-right-[3%] z-[-1] w-[900px] h-[900px] md:w-[600px] md:h-[600px]"
             style="
               background: radial-gradient(
                 50% 50% at 50% 50%,
@@ -548,11 +548,11 @@
       
       <div></div>
     </div> -->
-
-    <div class="max-w-[1200px] mx-3 lg:mx-auto">
+<!-- 30-Day Satisfaction -->
+    <div class="max-w-[1200px] mx-3 lg:mx-auto py-8 md:py-16">
       <div class="relative overflow-hidden rounded-xl">
         <div
-          class="absolute -bottom-[98%] -right-[70%] md:-bottom-[95%] md:-right-[5%] z-[-1] w-[900px] h-[900px] md:w-[600px] md:h-[600px] rounded-xl"
+          class="absolute -bottom-[98%] -right-[70%] md:-bottom-[75%] md:-right-[3%] z-[-1] w-[900px] h-[900px] md:w-[600px] md:h-[600px] rounded-xl"
           style="
             background: radial-gradient(
               50% 50% at 50% 50%,
@@ -576,7 +576,7 @@
                 >
                   30-Day Satisfaction Guarantee on All Plans
                 </h1>
-                <p class="text-[#363439]">
+                <p class="text-[#363439] mt-3">
                   Our expert clinicians, dieticians and coaches will work with
                   you.
                 </p>
