--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
             </div>
             <div class="md:w-3/5 overflow-hidden rounded-xl">
               <div
-                class="flex flex-row gap-5 px-3 pt-3 "
+                class="flex flex-row gap-5 px-3 pt-3"
                 style="
                   background: linear-gradient(180deg, #efeefe 0%, #bfbbfa 100%);
                   box-shadow: 0px 2px 4px -2px #1018280f,
@@ -540,15 +540,54 @@
         </div>
       </div>
     </div>
-    <!-- sign in -->
-    <!-- <div class="">
-      <div><h1>Sign up in the next 4 hours to receive a <span>30% discount</span> on your first month</h1>
-        <button class="flex items-center bg-white">Schedule a No-Obligation Call to Learn More <img src="./images/arrow.svg"/></button>
+    <!-- sign in section -->
+    <div class="relative flex flex-col-reverse md:flex-row overflow-hidden">
+      <div
+        class="absolute md:top-0 left-0 right-0 bottom-[5%] md:bottom-0 flex flex-col items-start justify-center z-20 p-4 text-white max-w-[1200px] mx-auto"
+        style="width: 100%;"
+      >
+        <h1 class="font-semibold text-[35px] md:text-[42px] md:leading-[53px] max-w-[400px]">
+          Sign up in the next 4 hours to receive a
+          <span
+            style="
+              background: linear-gradient(
+                180deg,
+                #efeefe 25.22%,
+                #560cf4 100%
+              );
+              -webkit-background-clip: text;
+              -webkit-text-fill-color: transparent;
+            "
+            >30% discount</span
+          >
+          on your first month
+        </h1>
+        <button
+          class="flex items-center rounded-full font-semibold bg-white text-gray-700 mt-5 md:mt-10 px-4 py-2"
+        >
+         <span class="hidden md:block"> Schedule a No-Obligation Call to Learn More</span> <span  class="block md:hidden">Get started with the Quiz</span>
+          <img src="./images/arrow.svg" class="ml-2" />
+        </button>
       </div>
-      
-      <div></div>
-    </div> -->
-<!-- 30-Day Satisfaction -->
+    
+      <div class="relative h-[400px] md:h-auto md:w-1/2 bg-[#030007]">
+        <div
+          class="absolute -bottom-[35%] left-0 right-0 flex items-center justify-center w-full h-[450px] md:h-[600px] z-0"
+          style="
+            background: radial-gradient(
+              50% 50% at 50% 50%,
+              #180433 0%,
+              rgba(12, 3, 23, 0.2) 100%
+            );
+          "
+        ></div>
+      </div>
+      <div class="md:w-1/2">
+        <img src="/images/fitness.png" />
+      </div>
+    </div>    
+
+    <!-- 30-Day Satisfaction -->
     <div class="max-w-[1200px] mx-3 lg:mx-auto py-8 md:py-16">
       <div class="relative overflow-hidden rounded-xl">
         <div
