--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         "
       ></div>
       <div
-        class="h-screen -mt-[40px] flex flex-col items-center justify-center text-center relative z-10 overflow-hidden max-w-[1200px] mx-auto"
+        class="h-screen -mt-[40px] flex flex-col items-center justify-center text-center relative z-10 overflow-hidden max-w-[1250px] mx-auto"
       >
         <h1
           class="text-white text-[38px] md:text-[68px] font-semibold max-w-[830px]"
@@ -74,14 +74,14 @@
             <img class="w-32 h-auto" src="/images/home-1.svg" />
           </div>
           <div
-            class="absolute top-[35%] right-0 transform -translate-y-1/2 z-[-1]"
+            class="absolute top-[35%] right-[0] transform -translate-y-1/2 z-[-1]"
           >
             <img class="w-32 h-auto" src="/images/home-2.svg" />
           </div>
-          <div class="absolute bottom-[8%] left-12 transform -translate-y-1/2">
+          <div class="absolute bottom-[8%] left-[2.5%] transform -translate-y-1/2">
             <img class="w-32 h-auto" src="/images/home-3.svg" />
           </div>
-          <div class="absolute bottom-[0%] right-12 transform -translate-y-1/2">
+          <div class="absolute bottom-[0%] right-[4%] transform -translate-y-1/2">
             <img class="w-32 h-auto" src="/images/home-4.svg" />
           </div>
         </div>
@@ -541,7 +541,7 @@
       </div>
     </div>
     <!-- sign in section -->
-    <div class="relative flex flex-col-reverse md:flex-row overflow-hidden">
+    <div class="relative flex flex-col-reverse md:flex-row overflow-hidden my-4 md:my-6">
       <div
         class="absolute md:top-0 left-0 right-0 bottom-[5%] md:bottom-0 flex flex-col items-start justify-center z-20 p-4 text-white max-w-[1200px] mx-auto"
         style="width: 100%;"
@@ -730,7 +730,7 @@
           </p>
         </div>
         <div class="md:w-1/2 flex flex-col md:flex-row gap-6 md:gap-10">
-          <div class="md:w-1/2 flex gap-10 font-medium">
+          <div class="md:w-1/2 flex gap-10 font-semibold">
             <div class="flex flex-col">
               <a>How it works</a>
               <a>Results</a>
@@ -740,11 +740,11 @@
             <div class="flex flex-col gap-3">
               <div><span>Customer service</span></div>
               <div><span>1 (800) 874-5881</span></div>
-              <div><span>Request call</span></div>
+              <div><span class="underline">Request call</span></div>
             </div>
           </div>
           <div class="md:w-1/2 text-[15px]">
-            <p>Pharmacy GPHC Number: 9011989</p>
+            <p class="font-semibold">Pharmacy GPHC Number: 9011989</p>
             <p>Pharmacy Superintendent Name: Dr Hassan Farah</p>
             <p>Pharmacy Superintendent GPHC Number: 2075016</p>
             <p>
