--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                   class="text-[30px] leading-[40px] lg:text-[49px] lg:leading-[59px] text-[#06010C] font-semibold"
                 >
                   Start with a Personalized Assessment – It’s
-                  <span class="font-bold">Quick & Confidential</span>
+                  <span class="font-extrabold">Quick & Confidential</span>
                 </h1>
                 <div class="hidden md:block">
                   <button
@@ -494,8 +494,8 @@
                 <h1 class="text-[22px] text-[#06010C] font-bold">
                   Anna lost 15 kg in 2 months
                 </h1>
-                <p class="font-medium">
-                  am currently on the program. I have had great success on my
+                <p class="font-medium text-[#363439]">
+                  I am currently on the program. I have had great success on my
                   journey with the help of the amazing staff at the Katy
                   location! I feel so much better overall and my energy level
                   has increased. My family is so supportive and happy that I’m
