--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
       "
     >
       <div class="max-w-[1200px] mx-auto">
-        <h1 class="text-[30px] md:text-[40px] font-semibold">
+        <h1 class="text-[30px] md:text-[40px] font-bold">
           Medical accreditations
         </h1>
         <p class="text-[15px] max-w-[580px]">
@@ -435,7 +435,7 @@
     </div>
     <!-- Thousands of people’s trust -->
     <div class="max-w-[1200px] mx-auto py-8 sm:py-12 px-3">
-      <h1 class="text-[30px] md:text-[40px] font-semibold">
+      <h1 class="text-[30px] md:text-[40px] font-bold">
         Thousands of people’s trust
       </h1>
       <p class="text-[15px] max-w-[580px]">
@@ -611,7 +611,7 @@
             <div class="md:w-3/5 flex flex-col gap-6">
               <div>
                 <h1
-                  class="text-[30px] leading-[40px] lg:text-[49px] lg:leading-[59px] text-[#06010C] font-semibold"
+                  class="text-[30px] leading-[40px] lg:text-[49px] lg:leading-[59px] text-[#06010C] font-bold"
                 >
                   30-Day Satisfaction Guarantee on All Plans
                 </h1>
@@ -698,7 +698,7 @@
       "
     >
       <div>
-        <h1 class="text-[#06010C] text-[40px] font-semibold text-center">
+        <h1 class="text-[#06010C] text-[40px] font-bold text-center">
           Your Health Deserves It
         </h1>
         <button
@@ -748,7 +748,7 @@
             <p>Pharmacy Superintendent Name: Dr Hassan Farah</p>
             <p>Pharmacy Superintendent GPHC Number: 2075016</p>
             <p>
-              Slimming Doctor is regulated by the Care Quality Commission (CQC).
+              Slimming Doctor is regulated by the <span class="font-semibold">Care Quality Commission (CQC).</span>
               We comply with the best practices outlined by the CQC which
               guarantees that you receive the highest level of care from us.
             </p>
