--- a/index.html
+++ b/index.html
@@ -711,13 +711,13 @@
     </div>
     <!-- footer -->
     <div
-      class="max-w-[1200px] mx-auto text-[#06010C] py-8 sm:py-12 px-3 lg:px-0"
+      class="max-w-[1200px] mx-auto text-[#06010C] py-8 sm:py-12 px-3 lg:px-0 font-normal"
     >
       <div class="flex flex-col gap-5 md:gap-0 md:flex-row">
         <div class="md:w-1/2">
-          <div><span class="font-semibold">BeautifulWeight</span></div>
+          <div><span class="font-bold">BeautifulWeight</span></div>
           <div class="mt-4">
-            <span class="font-semibold"
+            <span class="font-bold"
               >Feel the weight off your shoulders</span
             >
           </div>
@@ -731,7 +731,7 @@
         </div>
         <div class="md:w-1/2 flex flex-col md:flex-row gap-6 md:gap-10">
           <div class="md:w-1/2 flex gap-10 font-semibold">
-            <div class="flex flex-col">
+            <div class="flex flex-col gap-3">
               <a>How it works</a>
               <a>Results</a>
               <a>FAQs</a>
@@ -755,7 +755,7 @@
           </div>
         </div>
       </div>
-      <div class="flex items-center max-w-[390px] justify-between md:-mt-4">
+      <div class="flex items-center max-w-[390px] justify-between mt-4">
         <div
           class="rounded-full bg-white p-4 sm:p-5 border border-[#F2F4F7 max-w-[110px]"
         >
@@ -773,9 +773,9 @@
         </div>
       </div>
       <div class="border-t border-[#06010C] my-6"></div>
-      <div class="flex justify-between">
-        <div><span>BeautifulWeight © 2024 - All Rights Reserved</span></div>
-        <div class="flex gap-5">
+      <div class="flex gap-3 flex-col-reverse md:flex-row justify-between">
+        <div><span class="text-[14px] md:text-[16px]">BeautifulWeight © 2024 - All Rights Reserved</span></div>
+        <div class="flex gap-5 font-semibold md:font-normal">
           <a>Cookie Policy</a>
           <a>Terms & Conditions</a>
           <a>Privacy Policy</a>
