--- a/index.html
+++ b/index.html
@@ -78,10 +78,14 @@
           >
             <img class="w-32 h-auto" src="/images/home-2.svg" />
           </div>
-          <div class="absolute bottom-[8%] left-[2.5%] transform -translate-y-1/2">
+          <div
+            class="absolute bottom-[8%] left-[2.5%] transform -translate-y-1/2"
+          >
             <img class="w-32 h-auto" src="/images/home-3.svg" />
           </div>
-          <div class="absolute bottom-[0%] right-[4%] transform -translate-y-1/2">
+          <div
+            class="absolute bottom-[0%] right-[4%] transform -translate-y-1/2"
+          >
             <img class="w-32 h-auto" src="/images/home-4.svg" />
           </div>
         </div>
@@ -541,20 +545,20 @@
       </div>
     </div>
     <!-- sign in section -->
-    <div class="relative flex flex-col-reverse md:flex-row overflow-hidden my-4 md:my-6">
+    <div
+      class="relative flex flex-col-reverse md:flex-row overflow-hidden my-4 md:my-6"
+    >
       <div
         class="absolute md:top-0 left-0 right-0 bottom-[5%] md:bottom-0 flex flex-col items-start justify-center z-20 p-4 text-white max-w-[1200px] mx-auto"
-        style="width: 100%;"
+        style="width: 100%"
       >
-        <h1 class="font-semibold text-[35px] md:text-[42px] md:leading-[53px] max-w-[400px]">
+        <h1
+          class="font-semibold text-[35px] md:text-[42px] md:leading-[53px] max-w-[400px]"
+        >
           Sign up in the next 4 hours to receive a
           <span
             style="
-              background: linear-gradient(
-                180deg,
-                #efeefe 25.22%,
-                #560cf4 100%
-              );
+              background: linear-gradient(180deg, #efeefe 25.22%, #560cf4 100%);
               -webkit-background-clip: text;
               -webkit-text-fill-color: transparent;
             "
@@ -565,11 +569,14 @@
         <button
           class="flex items-center rounded-full font-semibold bg-white text-gray-700 mt-5 md:mt-10 px-4 py-2"
         >
-         <span class="hidden md:block"> Schedule a No-Obligation Call to Learn More</span> <span  class="block md:hidden">Get started with the Quiz</span>
+          <span class="hidden md:block">
+            Schedule a No-Obligation Call to Learn More</span
+          >
+          <span class="block md:hidden">Get started with the Quiz</span>
           <img src="./images/arrow.svg" class="ml-2" />
         </button>
       </div>
-    
+
       <div class="relative h-[400px] md:h-auto md:w-1/2 bg-[#030007]">
         <div
           class="absolute -bottom-[35%] left-0 right-0 flex items-center justify-center w-full h-[450px] md:h-[600px] z-0"
@@ -585,7 +592,7 @@
       <div class="md:w-1/2">
         <img src="/images/fitness.png" />
       </div>
-    </div>    
+    </div>
 
     <!-- 30-Day Satisfaction -->
     <div class="max-w-[1200px] mx-3 lg:mx-auto py-8 md:py-16">
@@ -688,7 +695,7 @@
     </div>
     <!-- get started now -->
     <div
-      class="py-8 sm:py-16 px-3 md:px-3"
+      class="py-8 sm:py-20 px-3 md:px-3"
       style="
         background: linear-gradient(
           180deg,
@@ -717,9 +724,7 @@
         <div class="md:w-1/2">
           <div><span class="font-bold">BeautifulWeight</span></div>
           <div class="mt-4">
-            <span class="font-bold"
-              >Feel the weight off your shoulders</span
-            >
+            <span class="font-bold">Feel the weight off your shoulders</span>
           </div>
           <p class="mt-3">
             Joint landing page for weightless and Slimming Doctor.
@@ -748,7 +753,8 @@
             <p>Pharmacy Superintendent Name: Dr Hassan Farah</p>
             <p>Pharmacy Superintendent GPHC Number: 2075016</p>
             <p>
-              Slimming Doctor is regulated by the <span class="font-semibold">Care Quality Commission (CQC).</span>
+              Slimming Doctor is regulated by the
+              <span class="font-semibold">Care Quality Commission (CQC).</span>
               We comply with the best practices outlined by the CQC which
               guarantees that you receive the highest level of care from us.
             </p>
@@ -774,7 +780,11 @@
       </div>
       <div class="border-t border-[#06010C] my-6"></div>
       <div class="flex gap-3 flex-col-reverse md:flex-row justify-between">
-        <div><span class="text-[14px] md:text-[16px]">BeautifulWeight © 2024 - All Rights Reserved</span></div>
+        <div>
+          <span class="text-[14px] md:text-[16px]"
+            >BeautifulWeight © 2024 - All Rights Reserved</span
+          >
+        </div>
         <div class="flex gap-5 font-semibold md:font-normal">
           <a>Cookie Policy</a>
           <a>Terms & Conditions</a>
