--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           Take the Quiz
           <img class="max-h-[13px] w-auto" src="./images/Icon.svg" />
         </button>
-        <p class="underline text-white text-[14px] mt-5">
+        <p class="underline text-white text-[24px] mt-5">
           Read Our Success Stories
         </p>
         <div class="hidden md:block">
@@ -507,31 +507,31 @@
                 </p>
               </div>
             </div>
-            <div class="md:w-3/5 overflow-hidden rounded-xl">
+            <div class="md:w-3/5 overflow-hidden">
               <div
-                class="flex flex-row gap-5 px-3 pt-3"
+                class="flex flex-col sm:flex-row gap-6 sm:gap-8 px-3 sm:px-7 pt-3 sm:pt-7 m-3 sm:m-0 rounded-xl sm:rounded-tl-none sm:rounded-bl-none"
                 style="
                   background: linear-gradient(180deg, #efeefe 0%, #bfbbfa 100%);
                   box-shadow: 0px 2px 4px -2px #1018280f,
                     0px 4px 8px -2px #1018281a;
                 "
               >
-                <div class="w-1/2">
+                <div class="sm:w-1/2">
                   <img src="/images/th-1.png" />
                   <div class="bg-[#EEE5FB] rounded-full p-1 max-w-[150px] my-4">
                     <button
-                      class="text-[#560CF4] font-semibold bg-white rounded-full px-4 py-1.5 text-[15px] border"
+                      class="text-[#560CF4] font-semibold bg-white rounded-full px-4 py-1 sm:py-1.5 text-[15px] border"
                     >
                       Before
                     </button>
                     <spn class="text-[#560CF4] font-medium">135 kg</spn>
                   </div>
                 </div>
-                <div class="w-1/2">
+                <div class="sm:w-1/2">
                   <img src="/images/th-2.png" />
                   <div class="bg-[#EEE5FB] rounded-full p-1 max-w-[150px] my-4">
                     <button
-                      class="text-[#560CF4] font-semibold bg-white rounded-full px-4 py-1.5 text-[15px] border"
+                      class="text-[#560CF4] font-semibold bg-white rounded-full px-4 py-1 sm:py-1.5 text-[15px] border"
                     >
                       After
                     </button>
@@ -549,11 +549,11 @@
       class="relative flex flex-col-reverse md:flex-row overflow-hidden my-4 md:my-6"
     >
       <div
-        class="absolute md:top-0 left-0 right-0 bottom-[5%] md:bottom-0 flex flex-col items-start justify-center z-20 p-4 text-white max-w-[1200px] mx-auto"
+        class="absolute md:top-0 left-0 right-0 bottom-[4%] sm:bottom-[5%] md:bottom-0 flex flex-col items-start justify-center z-20 p-4 text-white max-w-[1200px] mx-auto"
         style="width: 100%"
       >
         <h1
-          class="font-semibold text-[35px] md:text-[42px] md:leading-[53px] max-w-[400px]"
+          class="font-semibold text-[42px] leading-[47px] md:text-[50px] md:leading-[55px] md:max-w-[450px]"
         >
           Sign up in the next 4 hours to receive a
           <span
@@ -567,7 +567,7 @@
           on your first month
         </h1>
         <button
-          class="flex items-center rounded-full font-semibold bg-white text-gray-700 mt-5 md:mt-10 px-4 py-2"
+          class="flex w-full sm:w-auto justify-center items-center rounded-full font-semibold bg-white text-gray-700 mt-7 md:mt-14 px-4 py-2"
         >
           <span class="hidden md:block">
             Schedule a No-Obligation Call to Learn More</span
@@ -577,7 +577,7 @@
         </button>
       </div>
 
-      <div class="relative h-[400px] md:h-auto md:w-1/2 bg-[#030007]">
+      <div class="relative h-[335px] md:h-auto md:w-3/5 xl:w-1/2 bg-[#030007]">
         <div
           class="absolute -bottom-[35%] left-0 right-0 flex items-center justify-center w-full h-[450px] md:h-[600px] z-0"
           style="
@@ -589,8 +589,8 @@
           "
         ></div>
       </div>
-      <div class="md:w-1/2">
-        <img src="/images/fitness.png" />
+      <div class="md:w-2/5 xl:w-1/2">
+        <img src="/images/fit.jpeg" class="h-[620px] md:max-h-[455px] w-full object-cover" />
       </div>
     </div>
 
