--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </button>
       </div>
       <div
-        class="absolute -bottom-[100%]  sm:-bottom-[55%] left-0 right-0 flex items-center justify-center w-full h-[700px] z-0"
+        class="absolute -bottom-[100%] sm:-bottom-[55%] left-0 right-0 flex items-center justify-center w-full h-[700px] z-0"
         style="
           background: radial-gradient(
             50% 50% at 50% 50%,
@@ -58,10 +58,10 @@
           your life.
         </p>
         <button
-          class="flex items-center gap-4 text-white bg-[#560CF4] rounded-full px-6 py-2.5 text-[16px] mx-auto mt-10 border border-[#560CF4]"
+          class="flex items-center gap-4 text-white bg-[#560CF4] rounded-full px-6 py-2.5 text-[16px] mx-auto mt-8 sm:mt-10 border border-[#560CF4]"
           style="box-shadow: 0px 1px 7px 1px #6621facc"
         >
-          Take the Quiz
+          <span>Take the Quiz</span>
           <img class="max-h-[13px] w-auto" src="./images/Icon.svg" />
         </button>
         <p class="underline text-white text-[15px] mt-5 font-semibold">
@@ -413,10 +413,14 @@
       "
     >
       <div class="max-w-[1200px] mx-auto">
-        <h1 class="text-[35px] leading-[42px] md:text-[45px] md:leading-[55px] font-bold text-[#06010C]">
+        <h1
+          class="text-[35px] leading-[42px] md:text-[45px] md:leading-[55px] font-bold text-[#06010C]"
+        >
           Medical accreditations
         </h1>
-        <p class="text-[15px] max-w-[580px] text-[#363439] mt-4 md:mt-2 font-medium">
+        <p
+          class="text-[15px] max-w-[580px] text-[#363439] mt-4 md:mt-2 font-medium"
+        >
           Our expert clinicians, dieticians and coaches will work with you to
           tailor your plan to your unique needs and challenges around weight
           loss
@@ -447,10 +451,14 @@
     </div>
     <!-- Thousands of people’s trust -->
     <div class="max-w-[1200px] mx-auto py-8 sm:py-12 px-3">
-      <h1 class="text-[35px] leading-[42px] md:text-[45px] md:leading-[55px] font-bold text-[#06010C]">
+      <h1
+        class="text-[35px] leading-[42px] md:text-[45px] md:leading-[55px] font-bold text-[#06010C]"
+      >
         Thousands of people’s trust
       </h1>
-      <p class="text-[15px] max-w-[580px] text-[#363439] mt-4 md:mt-2 font-medium">
+      <p
+        class="text-[15px] max-w-[580px] text-[#363439] mt-4 md:mt-2 font-medium"
+      >
         Our expert clinicians, dieticians and coaches will work with you to
         tailor your plan.
       </p>
@@ -563,7 +571,7 @@
           style="width: 100%"
         >
           <h1
-            class="font-semibold text-[42px] leading-[47px] md:text-[50px] md:leading-[55px] md:max-w-[450px]"
+            class="font-semibold text-[40px] leading-[46px] md:text-[50px] md:leading-[55px] md:max-w-[450px]"
           >
             Sign up in the next 4 hours to receive a
             <span
