--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
     </div>
     <!-- Medical accreditations -->
     <div
-      class="py-6 sm:py-12 px-3"
+      class="py-6 sm:py-16 px-3"
       style="
         background: linear-gradient(
           180deg,
@@ -426,7 +426,7 @@
           loss
         </p>
         <div
-          class="grid grid-cols-2 sm:grid-cols-3 lg:grid-cols-6 gap-8 sm:gap-4 pt-8 sm:pt-12"
+          class="grid grid-cols-2 sm:grid-cols-3 lg:grid-cols-6 gap-8 pt-8 sm:pt-12"
         >
           <div class="rounded-full bg-white p-4 sm:p-6 border border-[#F2F4F7]">
             <img src="./images/md-1.png" />
