--- a/index.html
+++ b/index.html
@@ -788,7 +788,7 @@
               <div><span class="underline">Request call</span></div>
             </div>
           </div>
-          <div class="flex flex-col gap-1.5 md:w-1/2 text-[14px] max-w-[257px]">
+          <div class="flex flex-col gap-1.5 md:w-1/2 text-[14px] md:max-w-[257px]">
             <p class="font-semibold">Pharmacy GPHC Number: 9011989</p>
             <p>Pharmacy Superintendent Name: Dr Hassan Farah</p>
             <p>Pharmacy Superintendent GPHC Number: 2075016</p>
@@ -802,7 +802,7 @@
         </div>
       </div>
       <div
-        class="flex items-center sm:max-w-[390px] justify-between mt-7 md:-mt-6"
+        class="flex items-center sm:max-w-[390px] justify-between mt-7 pb-3 md:-mt-6"
       >
         <div
           class="rounded-full bg-white p-4 sm:p-5 border border-[#F2F4F7 max-w-[100px]"
